temp_files/tmp_1650770173.1.Compile_error
./temp_files/tmp_1650770173.1.cpp:11:3: error: ‘ssss’ does not name a type
   ssss;
   ^
